--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>REBECCA NUWAHEREZA</title>
-    <link rel="stylesheet" href="C:\Users\Inkotanyi.DESKTOP-00U0BJA\Desktop\Rebekah\style.css">
+    <link rel="stylesheet" href="rebeccanuwahereza.github.oi/style.css">
 </head>
 <body>
     <!-- Header with menu and profile picture -->
