--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
     <!-- Header with menu and profile picture -->
     <header>
         <div class="container">
-            <img src="C:\Users\Inkotanyi.DESKTOP-00U0BJA\Desktop\Rebekah\WhatsApp Image 2024-10-20 at 11.01.41_7a0b4849.jpg" alt="Your Picture" class="profile-pic">
+            <img src="rebeccanuwahereza.github.oi/WhatsApp Image 2024-10-20 at 11.01.41_7a0b4849.jpg" alt="Your Picture" class="profile-pic">
             <nav>
                 <ul>
                     <li><a href="#about">About Me</a></li>
