--- a/index.htm
+++ b/index.htm
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>REBECCA NUWAHEREZA</title>
-    <link rel="stylesheet" href="rebeccanuwahereza.github.oi/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header with menu and profile picture -->
     <header>
         <div class="container">
-            <img src="rebeccanuwahereza.github.oi/WhatsApp Image 2024-10-20 at 11.01.41_7a0b4849.jpg" alt="Your Picture" class="profile-pic">
+            <img src="WhatsApp Image 2024-10-20 at 11.01.41_7a0b4849.jpg" alt="Your Picture" class="profile-pic">
             <nav>
                 <ul>
                     <li><a href="#about">About Me</a></li>
