--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>REBECCA NUWAHEREZA</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://github.com/rebnuwa/home/blob/b98baeacdf3e1c6f37d131d1b394d5720e26e032/style.css">
 </head>
 <body>
     <!-- Header with menu and profile picture -->
