--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
     <!-- Header with menu and profile picture -->
     <header>
         <div class="container">
-            <img src="https://github.com/rebnuwa/home/blob/7b1bdad66e352678a6466d15847927363d9ed23c/WhatsApp%20Image%202024-10-20%20at%2011.01.41_7a0b4849.jpg" alt="Your Picture" class="profile-pic">
+            <img src="https://github.com/rebnuwa/home/blob/0c1219d9a2d145b1e84fa78725d438ec13ccbcf1/Img17.jpg" alt="Your Picture" class="profile-pic">
             <nav>
                 <ul>
                     <li><a href="#about">About Me</a></li>
