--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
     <!-- Header with menu and profile picture -->
     <header>
         <div class="container">
-            <img src="https://github.com/rebnuwa/home/blob/dd28a3fe6dd7e397953c70a3b5e2245400b4adaa/Img17.jpg" alt="Your Picture" class="profile-pic">
+            <img src="https://github.com/rebnuwa/home/blob/fb418389cbf3bdfe4271f4075fc4b3a0c23b3811/style.css" alt="Your Picture" class="profile-pic">
             <nav>
                 <ul>
                     <li><a href="#about">About Me</a></li>
