--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
     <!-- Header with menu and profile picture -->
     <header>
         <div class="container">
-            <img src="https://github.com/rebnuwa/home/blob/fb418389cbf3bdfe4271f4075fc4b3a0c23b3811/style.css" alt="Your Picture" class="profile-pic">
+            <img src="https://github.com/rebnuwa/home/blob/3382c13a8f2ecf30cd751f3ab224d4b6ebca8e62/Img17.jpg" alt="Your Picture" class="profile-pic">
             <nav>
                 <ul>
                     <li><a href="#about">About Me</a></li>
