--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@
     </header>
 
     <!-- About Me Section -->
-    <section id="about" class="container">
+    <section id="about me" class="container">
         <h2>About Me</h2>
         <p>Rebecca Nuwahereza, Im a student currently pursuing a Bachelor's degree in Library and Information Science at Makerere University, one of Uganda's premier institutions of higher learning. With a passion for literature and knowledge management, I developed a keen interest in how information can be organized and accessed effectively.</p>
 	<p>In addition to my academic pursuits, I'm actively involved in various extracurricular activities on campus, including the university's reading club, where I engage with fellow students to promote literacy and a love for reading. I'm also interested in digital libraries and the role of technology in enhancing information access.
@@ -34,38 +34,48 @@ Currently, I'm focused on my studies while seeking to gain practical experience 
 
     <!-- Education Section -->
     <section id="education" class="container">
-        <h2>Education</h2>
         <body>
 
-<h2>Schools Attended</h2>
+<main>
+        <section id="education" class="section">
+            <h2>Education</h2>
+            <div class="card-container">
+                <div class="card">
+                    <h3>Makerere University</h3>
+                    <p>Bachelor of Library And Information Science</p>
+                    <p>2020 - Present</p>
+                </div>
+                <div class="card">
+                    <h3>St John's Comprehensive Secondary School</h3>
+                    <p>Secondary Education</p>
+                    <p>2014 - 2019</p>
+                </div>
+                <div class="card">
+                    <h3></h3>St Paul's Kindergarten and Primary School</h3>
+                    <p>Primary Education</p>
+                    <p>2007 - 2013</p>
+                </div>
+            </div>
+        </section>
 
-<table style="width:100%">
-  <tr>
-    <th>2007-2013</th>
-    <th>2014-2017</th>
-    <th>2018-2019<br></th>
-    </tr>
-    <tr><td>St.Paul's Kindergarten</td>
-    <td>St.John's Comprehensive Secondary School</td>
-    <td>St.John's Comprehensive Secondary School</td>
-  </tr>
-  <tr>
-    <td>PRIMARY LEVEL EDUCATION</td>
-    <td>UGANDA CERTIFICATE OF EDUCATION</td>
-    <td>UGANDA ADVANCED CERTIFICATE OF EDUCATION</td>
-  </tr>
-</table>
 </body>
-    </section>
+    <section id="experience" class="section">
+            <h2>Work Experience</h2>
+            <div class="card-container">
+                <div class="card">
+                    <h3>Information Scientist</h3>
+                    <p>Library science class</p>
+                    <p>2024</p>
+                   
 
-    <!-- Experience Section -->
-    <section id="experience" class="container">
-        <h2>Work Experience</h2>
-        <ul>
-            <li>Internship at CEDAT LIBRARY, 2022</li>
-            <li>Community Aid Volunteer, 2023</li>
-        </ul>
-    </section>
+		</div>
+                <div class="card">
+                    <h3>Student Intern</h3>
+                    <p>CEDAT library</p>
+                    <p>2022</p>
+            </div>
+        </section>
+
 
     <!-- Hobbies Section -->
     <section id="hobbies" class="container">
@@ -86,7 +96,7 @@ Currently, I'm focused on my studies while seeking to gain practical experience 
 
     <!-- Footer -->
     <footer class="container">
-        <p>&copy; 2024 REBECCA NUWAHEREZA</p>
+        <p>&copy; 2024 Rebecca Nuwaherza. All rights reserved.</p>
     </footer>
 </body>
 </html>
