--- a/index.htm
+++ b/index.htm
@@ -51,7 +51,7 @@ Currently, I'm focused on my studies while seeking to gain practical experience 
                     <p>2014 - 2019</p>
                 </div>
                 <div class="card">
-                    <h3></h3>St Paul's Kindergarten and Primary School</h3>
+                    <h3>St Paul's Kindergarten and Primary School</h3>
                     <p>Primary Education</p>
                     <p>2007 - 2013</p>
                 </div>
