--- a/index.htm
+++ b/index.htm
@@ -63,8 +63,8 @@ Currently, I'm focused on my studies while seeking to gain practical experience 
             <h2>Work Experience</h2>
             <div class="card-container">
                 <div class="card">
-                    <h3>Information Scientist</h3>
-                    <p>Library science class</p>
+                    <h3>Volunteering</h3>
+                    <p>Uganda Revenue Authority</p>
                     <p>2024</p>
                    
 
