--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,9 @@
     <header>
         <div class="container">
             <img src="Img17.jpg" alt="Your Picture" class="profile-pic">
+		<h1>Welcome to my personal website</h1>
             <nav>
+		    <h1>Nuwahereza Rebecca-BLIS Student at COCIS</h1>
                 <ul>
                     <li><a href="#about">About Me</a></li>
                     <li><a href="#education">Education</a></li>
