--- a/index.htm
+++ b/index.htm
@@ -98,7 +98,7 @@ Currently, I'm focused on my studies while seeking to gain practical experience 
 
     <!-- Footer -->
     <footer class="container">
-        <p>&copy; 2024 Rebecca Nuwaherza. All rights reserved.</p>
+        <p>&copy; 2024 Rebecca Nuwahereza. All rights reserved.</p>
     </footer>
 </body>
 </html>
